# routes/mainRoutes.js
@@ -4,6 +4,7 @@ const router = express.Router();
 const typeRoutes = require("./subRoutes/type");
 const clubRoutes = require("./subRoutes/club");
 const userRoutes = require("./subRoutes/users");
+const videoRoutes = require("./subRoutes/video");
 const imageRoutes = require("./subRoutes/image");
 const fightRoutes = require("./subRoutes/fight");
 const matchingRoutes = require("./subRoutes/match");
@@ -24,6 +25,7 @@ router.use("/fight", fightRoutes);
 router.use("/image", imageRoutes);
 router.use("/admin", adminRoutes);
 router.use("/notif", notifRoutes);
+router.use("/video", videoRoutes);
 router.use("/match", matchingRoutes);
 router.use("/referee", refereeRoutes);
 router.use("/ranking", rankingRoutes);
